feat(connector-besy): squash
