# examples/cactus-example-supply-chain-business-logic-plugin/src/main/typescript/business-logic-plugin/web-services/insert-bookshelf-endpoint.ts
@@ -101,7 +101,7 @@ export class InsertBookshelfEndpoint implements IWebServiceEndpoint {
 
       const {
         data: { callOutput, transactionReceipt },
-      } = await this.opts.besuApi.invokeContractV1({
+      } = await this.opts.besuApi.invokeContractKeychainV1({
         contractName: this.opts.contractName,
         invocationType: EthContractInvocationType.Send,
         methodName: "insertRecord",
